fixed bugs, removed flickering, added score, added game over mechanism

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -72,7 +72,7 @@ html {
  */
 
 body {
-    margin: 0;
+    margin: 10;
 }
 
 /* ==========================================================================
